--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,7 +13,7 @@ jobs:
             max-parallel: 3
             matrix:
                 operating-system: [ubuntu-latest]
-                php-versions: ['7.3', '7.4']
+                php-versions: ['7.3', '7.4', '8.0']
                 composer-args: ['--prefer-lowest --prefer-stable', '']
         steps:
             -   name: Checkout
